Add Leilla To UI / UI improvements

--- a/index.html
+++ b/index.html
@@ -1,109 +1,123 @@
 <html>
 <head>
-    <title id='title'>Download sif cards from schoolido.lu</title>
-    <script src='jszip.min.js'></script>
-    <script src='FileSaver.js'></script>
+    <title id="title">Download sif cards from schoolido.lu</title>
+    <script src="jszip.min.js"></script>
+    <script src="FileSaver.js"></script>
 </head>
 <body>
-    <button id='buttno' onclick='downloadImages()'>Download</button>
+    <button id="buttno" onclick="downloadImages()">Download</button>
     <br>
-    <p id='counting'></p>
+    <p id="counting"></p>
     <br>
-    <p id='scanPrc'></p>
+    <p id="scanPrc"></p>
     <br>
-    <div id='settings'>
-        <input type="checkbox" id="downloadAll" name="downloadAll" value="downloadAll" onchange='cardsVisibility()' checked>
+    <div id="settings">
+        <input type="checkbox" id="downloadAll" name="downloadAll" value="downloadAll" onchange="cardsVisibility()" checked>
         <label for="downloadAll">Download All</label><br><br>
-        <div id='downloadSelect' style='display:none;'>
-            <input type="checkbox" id="noDownloadOther" name="noDownloadOther" value="noDownloadOther">
+        <div id="downloadSelect" style="display:none;">
+            <input type="checkbox" id="noDownloadOther" name="noDownloadOther" value="noDownloadOther" onchange="noDOtherVis()">
             <label for="noDownloadOther">Download All, except other</label><br><br>
-            <div id='Muse' style="float:left; width:25%;">
-                <input type="checkbox" id="Honoka" name="Honoka" value="Honoka">
-                <label for="Honoka">Honoka Kosaka</label><br>
-                <input type="checkbox" id="Eli" name="Eli" value="Eli">
-                <label for="Eli">Eli Ayase</label><br>
-                <input type="checkbox" id="Kotori" name="Kotori" value="Kotori">
-                <label for="Kotori">Kotori Minami</label><br>
-                <input type="checkbox" id="Umi" name="Umi" value="Umi">
-                <label for="Umi">Umi Sonoda</label><br>
-                <input type="checkbox" id="Rin" name="Rin" value="Rin">
-                <label for="Rin">Rin Hoshizora</label><br>
-                <input type="checkbox" id="Maki" name="Maki" value="Maki">
-                <label for="Maki">Maki Nishikino</label><br>
-                <input type="checkbox" id="Nozomi" name="Nozomi" value="Nozomi">
-                <label for="Nozomi">Nozomi Tojo</label><br>
-                <input type="checkbox" id="Hanayo" name="Hanayo" value="Hanayo">
-                <label for="Hanayo">Hanayo Koizumi</label><br>
-                <input type="checkbox" id="Nico" name="Nico" value="Nico">
-                <label for="Nico">Nico Yazawa</label><br>
-                <br>
-            </div>
-            <div id='Aqours' style="float:left; width:25%;">
-                <input type="checkbox" id="Chika" name="Chika" value="Chika">
-                <label for="Chika">Chika Takami</label><br>
-                <input type="checkbox" id="Riko" name="Riko" value="Riko">
-                <label for="Riko">Riko Sakurauchi</label><br>
-                <input type="checkbox" id="Kanan" name="Kanan" value="Kanan">
-                <label for="Kanan">Kanan Matsuura</label><br>
-                <input type="checkbox" id="Dia" name="Dia" value="Dia">
-                <label for="Dia">Dia Kurosawa</label><br>
-                <input type="checkbox" id="You" name="You" value="You">
-                <label for="You">You Watanabe</label><br>
-                <input type="checkbox" id="Yoshiko" name="Yoshiko" value="Yoshiko">
-                <label for="Yoshiko">Yoshiko Tsushima</label><br>
-                <input type="checkbox" id="Hanamaru" name="Hanamaru" value="Hanamaru">
-                <label for="Hanamaru">Hanamaru Kunikida</label><br>
-                <input type="checkbox" id="Mari" name="Mari" value="Mari">
-                <label for="Mari">Mari Ohara</label><br>
-                <input type="checkbox" id="Ruby" name="Ruby" value="Ruby">
-                <label for="Ruby">Ruby Kurosawa</label><br>
-                <br>
-            </div>
-            <div id='Nijigasaki' style="float:left; width:25%;">
-                <input type="checkbox" id="Ayumu" name="Ayumu" value="Ayumu">
-                <label for="Ayumu">Ayumu Uehara</label><br>
-                <input type="checkbox" id="Kasumi" name="Kasumi" value="Kasumi">
-                <label for="Kasumi">Kasumi Nakasu</label><br>
-                <input type="checkbox" id="Shizuku" name="Shizuku" value="Shizuku">
-                <label for="Shizuku">Shizuku Osaka</label><br>
-                <input type="checkbox" id="Karin" name="Karin" value="Karin">
-                <label for="Karin">Karin Asaka</label><br>
-                <input type="checkbox" id="Ai" name="Ai" value="Ai">
-                <label for="Ai">Ai Miyashita</label><br>
-                <input type="checkbox" id="Kanata" name="Kanata" value="Kanata">
-                <label for="Kanata">Kanata Konoe</label><br>
-                <input type="checkbox" id="Setsuna" name="Setsuna" value="Setsuna">
-                <label for="Setsuna">Setsuna Yuki</label><br>
-                <input type="checkbox" id="Emma" name="Emma" value="Emma">
-                <label for="Emma">Emma Verde</label><br>
-                <input type="checkbox" id="Rina" name="Rina" value="Rina">
-                <label for="Rina">Rina Tennoji</label><br>
-                <br>
-            </div>
-            <div id='whitespace' style="float:left; width:25%;">
-                <input type="checkbox" id="otherIdols" name="otherIdols" value="otherIdols">
-                <label for="otherIdols">Other Idols/Cards</label><br>
-                <br><br><br><br><br><br><br><br><br><br>
+            <div id="mainDownload">
+                <div id="Muse" style="float:left; width:25%;">
+                    <input type="checkbox" id="Honoka" name="Honoka" value="Honoka">
+                    <label for="Honoka">Honoka Kosaka</label><br>
+                    <input type="checkbox" id="Eli" name="Eli" value="Eli">
+                    <label for="Eli">Eli Ayase</label><br>
+                    <input type="checkbox" id="Kotori" name="Kotori" value="Kotori">
+                    <label for="Kotori">Kotori Minami</label><br>
+                    <input type="checkbox" id="Umi" name="Umi" value="Umi">
+                    <label for="Umi">Umi Sonoda</label><br>
+                    <input type="checkbox" id="Rin" name="Rin" value="Rin">
+                    <label for="Rin">Rin Hoshizora</label><br>
+                    <input type="checkbox" id="Maki" name="Maki" value="Maki">
+                    <label for="Maki">Maki Nishikino</label><br>
+                    <input type="checkbox" id="Nozomi" name="Nozomi" value="Nozomi">
+                    <label for="Nozomi">Nozomi Tojo</label><br>
+                    <input type="checkbox" id="Hanayo" name="Hanayo" value="Hanayo">
+                    <label for="Hanayo">Hanayo Koizumi</label><br>
+                    <input type="checkbox" id="Nico" name="Nico" value="Nico">
+                    <label for="Nico">Nico Yazawa</label><br>
+                    <br>
+                </div>
+                <div id="Aqours" style="float:left; width:25%;">
+                    <input type="checkbox" id="Chika" name="Chika" value="Chika">
+                    <label for="Chika">Chika Takami</label><br>
+                    <input type="checkbox" id="Riko" name="Riko" value="Riko">
+                    <label for="Riko">Riko Sakurauchi</label><br>
+                    <input type="checkbox" id="Kanan" name="Kanan" value="Kanan">
+                    <label for="Kanan">Kanan Matsuura</label><br>
+                    <input type="checkbox" id="Dia" name="Dia" value="Dia">
+                    <label for="Dia">Dia Kurosawa</label><br>
+                    <input type="checkbox" id="You" name="You" value="You">
+                    <label for="You">You Watanabe</label><br>
+                    <input type="checkbox" id="Yoshiko" name="Yoshiko" value="Yoshiko">
+                    <label for="Yoshiko">Yoshiko Tsushima</label><br>
+                    <input type="checkbox" id="Hanamaru" name="Hanamaru" value="Hanamaru">
+                    <label for="Hanamaru">Hanamaru Kunikida</label><br>
+                    <input type="checkbox" id="Mari" name="Mari" value="Mari">
+                    <label for="Mari">Mari Ohara</label><br>
+                    <input type="checkbox" id="Ruby" name="Ruby" value="Ruby">
+                    <label for="Ruby">Ruby Kurosawa</label><br>
+                    <br>
+                </div>
+                <div id="Nijigasaki" style="float:left; width:25%;">
+                    <input type="checkbox" id="Ayumu" name="Ayumu" value="Ayumu">
+                    <label for="Ayumu">Ayumu Uehara</label><br>
+                    <input type="checkbox" id="Kasumi" name="Kasumi" value="Kasumi">
+                    <label for="Kasumi">Kasumi Nakasu</label><br>
+                    <input type="checkbox" id="Shizuku" name="Shizuku" value="Shizuku">
+                    <label for="Shizuku">Shizuku Osaka</label><br>
+                    <input type="checkbox" id="Karin" name="Karin" value="Karin">
+                    <label for="Karin">Karin Asaka</label><br>
+                    <input type="checkbox" id="Ai" name="Ai" value="Ai">
+                    <label for="Ai">Ai Miyashita</label><br>
+                    <input type="checkbox" id="Kanata" name="Kanata" value="Kanata">
+                    <label for="Kanata">Kanata Konoe</label><br>
+                    <input type="checkbox" id="Setsuna" name="Setsuna" value="Setsuna">
+                    <label for="Setsuna">Setsuna Yuki</label><br>
+                    <input type="checkbox" id="Emma" name="Emma" value="Emma">
+                    <label for="Emma">Emma Verde</label><br>
+                    <input type="checkbox" id="Rina" name="Rina" value="Rina">
+                    <label for="Rina">Rina Tennoji</label><br>
+                    <br>
+                </div>
+                <div id="whitespace" style="float:left; width:25%;">
+                    <input type="checkbox" id="Chisato" name="Chisato" value="Chisato">
+                    <label for="Chisato">Chisato Arashi</label><br>
+                    <input type="checkbox" id="Ren" name="Ren" value="Ren">
+                    <label for="Ren">Ren Hazuki</label><br>
+                    <input type="checkbox" id="Sumire" name="Sumire" value="Sumire">
+                    <label for="Sumire">Sumire Heanna</label><br>
+                    <input type="checkbox" id="Keke" name="Keke" value="Keke">
+                    <label for="Keke">Keke Tang</label><br>
+                    <input type="checkbox" id="Kanon" name="Kanon" value="Kanon">
+                    <label for="Kanon">Kanon Shibuya</label><br><br><br><br>
+                    <input type="checkbox" id="otherIdols" name="otherIdols" value="otherIdols">
+                    <label for="otherIdols">Other Idols/Cards</label><br>
+                    <br><br>
+                </div>
             </div>
         </div>
         <input type="checkbox" id="Transparent" name="Transparent" value="Transparent">
         <label for="Transparent">Transparent Cards</label><br>
         <br><br>
-        <p>Start at </p><input id="startAt" type='number' value='0'>
-        <p>End At</p><input id="totalCards" type='number' value='2971'><br><br>
+        <p>Start at </p><input id="startAt" type="number" value="0">
+        <p>End At</p><input id="totalCards" type="number" value="2971"><br><br>
         <input type="checkbox" id="displayLinks" name="displayLinks" value="displayLinks" checked>
         <label for="displayLinks">Display filenames/links while downloading</label><br><br>
-        <input type="checkbox" id="convertFiles" name="convertFiles" value="convertFiles" onchange='convertVisibility()'>
+        <input type="checkbox" id="convertFiles" name="convertFiles" value="convertFiles" onchange="convertVisibility()">
         <label for="convertFiles">Convert files from png to jpg (cpu and memory may increase)</label><br><br>
-        <div id='jpgsettings' style='display:none;'><ul><p>Quality. 0 - 100</p><input id="jpgQuality" type='number' value='92'><br><br></ul></div>
-        <input type="checkbox" id="downloadZip" name="downloadZip" value="downloadZip" checked>
+        <div id="jpgsettings" style="display:none;"><ul><p>Quality. 0 - 100</p><input id="jpgQuality" type="number" value="92"><br><br></ul></div>
+        <input type="checkbox" id="downloadZip" name="downloadZip" value="downloadZip" onchange="zipVisibility()" checked>
         <label for="downloadZip">Download as zip</label><br><br>
-        <p>Zip Filename</p>
-        <input type='text' value='Anime Cards' id='zipFilename'>
-        <br><br><br>
-        <input type="checkbox" id="developer" name="developer" value="developer" onchange='developerVisibility()'>
+        <div id="downloadZipDiv">
+            <p>Zip Filename</p>
+            <input type="text" value="Anime Cards" id="zipFilename">
+            <br><br><br>
+        </div>
+        <input type="checkbox" id="developer" name="developer" value="developer" onchange="developerVisibility()">
         <label for="developer">Developer Mode</label><br>
-        <div id='developerMode' style='display:none;'>
+        <div id="developerMode" style="display:none;">
             <ul>
             <p>Developer Mode May break auto zip. You may need to manually click the zip button when completed</p>
             <input type="checkbox" id="deepScan" name="deepScan" value="deepScan">
@@ -113,10 +127,10 @@
             <input type="checkbox" id="findUnknownCards" name="findUnknownCards" value="findUnknownCards">
             <label for="findUnknownCards">Find unknown cards</label><br>
             <br>
-            <p id='customCardMessage'>custom card list (to build onto)</p>
-            <input id='customCardsList' type='file' onchange='customCardList()'><br>
-            <p id='cardsToScanMessage'>Custom Card list (to scan)</p>
-            <input id='cardsToScan' type='file' onchange='cardsToScanList()'>
+            <p id="customCardMessage">custom card list (to build onto)</p>
+            <input id="customCardsList" type="file" onchange="customCardList()"><br>
+            <p id="cardsToScanMessage">Custom Card list (to scan)</p>
+            <input id="cardsToScan" type="file" onchange="cardsToScanList()">
             </ul>
         </div>
         <br>
@@ -125,12 +139,12 @@
         <input type="checkbox" id="idolized" name="idolized" value="idolized" checked>
         <label for="idolized">Idolized</label><br>
         <br>
-        <p>To View More Card Details, Visit <a href='https://schoolido.lu/cards/' target="_blank">schoolidol.lu/cards/</a></p>
+        <p>To View More Card Details, Visit <a href="https://schoolido.lu/cards/" target="_blank">schoolidol.lu/cards/</a></p>
     </div><br>
-    <button onclick='zipFile()' id='zippFilee' style='display:none'>Stop Downloading and zip</button>
-    <button onclick='stopDownload()' id='stoppDownload' style='display:none'>Stop Downloading</button>
+    <button onclick="zipFile()" id="zippFilee" style="display:none">Stop Downloading and zip</button>
+    <button onclick="stopDownload()" id="stoppDownload" style="display:none">Stop Downloading</button>
     <br><br>
-    <ul id='cards'></ul>
+    <ul id="cards"></ul>
     <script>
         var cardList = document.getElementById('cards')
         var counting = document.getElementById('counting')
@@ -223,6 +237,24 @@
         function developerVisibility() {
             var div = document.getElementById('developerMode')
             var check = document.getElementById('developer').checked
+            if (check) {
+                div.style = 'display:block;'
+            } else {
+                div.style = 'display:none;'
+            }
+        }
+        function noDOtherVis() {
+            var div = document.getElementById('mainDownload')
+            var check = document.getElementById('noDownloadOther').checked
+            if (check) {
+                div.style = 'display:none;'
+            } else {
+                div.style = 'display:block;'
+            }
+        }
+        function zipVisibility() {
+            var div = document.getElementById('downloadZipDiv')
+            var check = document.getElementById('downloadZip').checked
             if (check) {
                 div.style = 'display:block;'
             } else {
